# dinocast

./: CMakeLists.txt  README.md  dinocaust.rar  main.cpp
src/animation/: Animation.cpp  Animation.h
src/characters/: Character.h  Dino.cpp  Dino.h  Enemy.cpp  Enemy.h
src/collision/: Collider.h  CollisionHandler.cpp  CollisionHandler.h
src/graphics/: TextureHandler.cpp  TextureHandler.h
src/inputs/: Input.cpp  Input.h
src/main/: Engine.cpp  Engine.h  Menu.cpp  Menu.h  Timer.cpp  Timer.h
src/object/: GameObject.h  Object.h
src/physics/: RigidBody.h  Transform.h  Vector2D.h
src/util/: NumberGenerator.cpp  NumberGenerator.h
